testdata/baselines/reference/submodule/conformance/nodeModulesConditionalPackageExports(module=nodenext).errors.txt
index.cts(8,23): error TS2307: Cannot find module 'inner/a' or its corresponding type declarations.
index.cts(9,23): error TS2307: Cannot find module 'inner/b' or its corresponding type declarations.
index.cts(11,21): error TS2307: Cannot find module 'inner/types' or its corresponding type declarations.
index.mts(8,23): error TS2307: Cannot find module 'inner/a' or its corresponding type declarations.
index.mts(9,23): error TS2307: Cannot find module 'inner/b' or its corresponding type declarations.
index.mts(11,21): error TS2307: Cannot find module 'inner/types' or its corresponding type declarations.
index.mts(14,7): error TS2339: Property 'mjsSource' does not exist on type 'typeof import("node_modules/inner/index")'.
index.ts(8,23): error TS2307: Cannot find module 'inner/a' or its corresponding type declarations.
index.ts(9,23): error TS2307: Cannot find module 'inner/b' or its corresponding type declarations.
index.ts(11,21): error TS2307: Cannot find module 'inner/types' or its corresponding type declarations.
index.ts(14,7): error TS2339: Property 'mjsSource' does not exist on type 'typeof import("node_modules/inner/index")'.
node_modules/inner/index.d.cts(2,22): error TS2307: Cannot find module 'inner/a' or its corresponding type declarations.
node_modules/inner/index.d.cts(3,22): error TS2307: Cannot find module 'inner/b' or its corresponding type declarations.
node_modules/inner/index.d.cts(5,21): error TS2307: Cannot find module 'inner/types' or its corresponding type declarations.
node_modules/inner/index.d.mts(2,22): error TS2307: Cannot find module 'inner/a' or its corresponding type declarations.
node_modules/inner/index.d.mts(3,22): error TS2307: Cannot find module 'inner/b' or its corresponding type declarations.
node_modules/inner/index.d.mts(5,21): error TS2307: Cannot find module 'inner/types' or its corresponding type declarations.
node_modules/inner/index.d.ts(2,22): error TS2307: Cannot find module 'inner/a' or its corresponding type declarations.
node_modules/inner/index.d.ts(3,22): error TS2307: Cannot find module 'inner/b' or its corresponding type declarations.
node_modules/inner/index.d.ts(5,21): error TS2307: Cannot find module 'inner/types' or its corresponding type declarations.


==== index.ts (4 errors) ====
    // esm format file
    import * as cjs from "package/cjs";
    import * as mjs from "package/mjs";
    import * as type from "package";
    cjs;
    mjs;
    type;
    import * as cjsi from "inner/a";
                          ~~~~~~~~~
!!! error TS2307: Cannot find module 'inner/a' or its corresponding type declarations.
    import * as mjsi from "inner/b";
                          ~~~~~~~~~
!!! error TS2307: Cannot find module 'inner/b' or its corresponding type declarations.
    import * as typei from "inner";
    import * as ts from "inner/types";
                        ~~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'inner/types' or its corresponding type declarations.
    cjsi.mjsSource;
    mjsi.mjsSource;
    typei.mjsSource;
          ~~~~~~~~~
!!! error TS2339: Property 'mjsSource' does not exist on type 'typeof import("node_modules/inner/index")'.
    ts.mjsSource;
==== index.mts (4 errors) ====
    // esm format file
    import * as cjs from "package/cjs";
    import * as mjs from "package/mjs";
    import * as type from "package";
    cjs;
    mjs;
    type;
    import * as cjsi from "inner/a";
                          ~~~~~~~~~
!!! error TS2307: Cannot find module 'inner/a' or its corresponding type declarations.
    import * as mjsi from "inner/b";
                          ~~~~~~~~~
!!! error TS2307: Cannot find module 'inner/b' or its corresponding type declarations.
    import * as typei from "inner";
    import * as ts from "inner/types";
                        ~~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'inner/types' or its corresponding type declarations.
    cjsi.mjsSource;
    mjsi.mjsSource;
    typei.mjsSource;
          ~~~~~~~~~
!!! error TS2339: Property 'mjsSource' does not exist on type 'typeof import("node_modules/inner/index")'.
    ts.mjsSource;
==== index.cts (3 errors) ====
    // cjs format file
    import * as cjs from "package/cjs";
    import * as mjs from "package/mjs";
    import * as type from "package";
    cjs;
    mjs;
    type;
    import * as cjsi from "inner/a";
                          ~~~~~~~~~
!!! error TS2307: Cannot find module 'inner/a' or its corresponding type declarations.
    import * as mjsi from "inner/b";
                          ~~~~~~~~~
!!! error TS2307: Cannot find module 'inner/b' or its corresponding type declarations.
    import * as typei from "inner";
    import * as ts from "inner/types";
                        ~~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'inner/types' or its corresponding type declarations.
    cjsi.cjsSource;
    mjsi.cjsSource;
    typei.implicitCjsSource;
    ts.cjsSource;
==== node_modules/inner/index.d.ts (3 errors) ====
    // cjs format file
    import * as cjs from "inner/a";
                         ~~~~~~~~~
!!! error TS2307: Cannot find module 'inner/a' or its corresponding type declarations.
    import * as mjs from "inner/b";
                         ~~~~~~~~~
!!! error TS2307: Cannot find module 'inner/b' or its corresponding type declarations.
    import * as type from "inner";
    import * as ts from "inner/types";
                        ~~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'inner/types' or its corresponding type declarations.
    export { cjs };
    export { mjs };
    export { type };
    export { ts };
    export const implicitCjsSource = true;
==== node_modules/inner/index.d.mts (3 errors) ====
    // esm format file
    import * as cjs from "inner/a";
                         ~~~~~~~~~
!!! error TS2307: Cannot find module 'inner/a' or its corresponding type declarations.
    import * as mjs from "inner/b";
                         ~~~~~~~~~
!!! error TS2307: Cannot find module 'inner/b' or its corresponding type declarations.
    import * as type from "inner";
    import * as ts from "inner/types";
                        ~~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'inner/types' or its corresponding type declarations.
    export { cjs };
    export { mjs };
    export { type };
    export { ts };
    export const mjsSource = true;
==== node_modules/inner/index.d.cts (3 errors) ====
    // cjs format file
    import * as cjs from "inner/a";
                         ~~~~~~~~~
!!! error TS2307: Cannot find module 'inner/a' or its corresponding type declarations.
    import * as mjs from "inner/b";
                         ~~~~~~~~~
!!! error TS2307: Cannot find module 'inner/b' or its corresponding type declarations.
    import * as type from "inner";
    import * as ts from "inner/types";
                        ~~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'inner/types' or its corresponding type declarations.
    export { cjs };
    export { mjs };
    export { type };
    export { ts };
    export const cjsSource = true;
==== package.json (0 errors) ====
    {
        "name": "package",
        "private": true,
        "type": "module",
        "exports": {
            "./cjs": "./index.cjs",
            "./mjs": "./index.mjs",
            ".": "./index.js"
        }
    }
==== node_modules/inner/package.json (0 errors) ====
    {
        "name": "inner",
        "private": true,
        "exports": {
            "./a": {
                "require": "./index.cjs",
                "node": "./index.mjs"
            },
            "./b": {
                "import": "./index.mjs",
                "node": "./index.cjs"
            },
            ".": {
                "import": "./index.mjs",
                "node": "./index.js"
            },
            "./types": {
                "types": {
                    "import": "./index.d.mts",
                    "require": "./index.d.cts",
                },
                "node": {
                    "import": "./index.mjs",
                    "require": "./index.cjs"
                }
            }
        }
    }